perl (5.18.0-3) UNRELEASED; urgency=low

  * Remove the Provides entries for the deprecated core modules. (See #702096)
  * Make perlbug.PL run patchlevel.h through cpp where possible.
    (Closes: #710842)

 -- Niko Tyni <ntyni@debian.org>  Mon, 10 Jun 2013 23:14:44 +0300

perl (5.18.0-2) experimental; urgency=low

  * Apply patches from upstream fixing FTBFS on sparc relating to
    pmop alignment (Closes: #708792)
  * Update the deprecation warning to point to the Debian packages for
    modules deprecated in 5.18
  * Disable failing Net-Ping tests for GNU/Hurd (see: 709385)
  * Apply patch from Jonathan Nieder fixing Memoize::Storable 'nstore'
    option (Closes: #677292)
  * Apply patch from Peter Pentchev fixing Net::FTP failure handling
    (Closes: #491062)
  * Add Breaks/Provides/Replaces/Recommends/Suggests on deprecated
    modules (Closes: #702096)

 -- Dominic Hargreaves <dom@earth.li>  Sun, 09 Jun 2013 12:47:28 +0100

perl (5.18.0-1) experimental; urgency=low

  * New upstream release
    - update Breaks version for libpod-simple-perl 
  * Additional bugs fixed since 5.14:
    - pending signals are processed in both the parent and child process
      after a fork() (Closes: 495788)
    - occasional test failures from Time-HiRes (Closes: #637470)
    - Storing shared_clone with overload in shared_clone strips off
      overload (Closes: #677588)
    - segfaults when freeing deeply nested structures (Closes: #624759)
    - creating and destroying threads with perl results in memory leak
      (Closes: #700624)
    - double free or corruption crash after thread->join when POE::Kernel
      is loaded (Closes: #707206)
    - Behaviour changed in Text::Wrap (Closes: #101933)
    - pod2html doesn't remove temporary files (Closes: #378328)
    - Syslog.pm adds newline and later EOL whitespace to spamassassin
      /var/log/syslog messages (Closes: #496254)
    - Pod::PlainText doesn't recognize =encoding (Closes: #587733)